[project]
name = "eth-txpool-fuzzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "web3>=7.12.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.131.30",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
